tb-manifests/namespaces/cicd/jenkins-master.yaml
# Copyright 2020 The Tranquility Base Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
### Jenkins Service ###
apiVersion: v1
kind: Service
metadata:
  name: jenkins-master-svc
  labels:
    app: jenkins-master
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
    - port: 50000
      targetPort: 50000
      protocol: TCP
      name: slave
  selector:
    app: jenkins-master
---
### Jenkins Deployment ###
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: jenkins-master
  name: jenkins-master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins-master
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: jenkins-master
    spec:
      containers:
        - name: jenkins-master
          image: gcr.io/tranquility-base-images/tb-jenkins:geofftest
          args: ["--prefix=/jenkins-service"]
          securityContext:
            privileged: true
            runAsUser: 0
          imagePullPolicy: "Always"
          volumeMounts:
            - name: jenkins-home
              mountPath: /var/jenkins_home
#            - name: docker-sock-volume
#              mountPath: /var/run/docker.sock
#             - name: google-cloud-key
#               mountPath: /var/secrets/google
          resources:
            requests:
              memory: "1024Mi"
              cpu: "1"
            limits:
              memory: "4096Mi"
              cpu: "2"
          ports:
            - name: http-port
              containerPort: 8080
            - name: jnlp-port
              containerPort: 50000
      volumes:
        - name: config-volume
          configMap:
            name: ec-config
        # - name: google-cloud-key
        #   secret:
        #     secretName: ec-service-account
        - name: jenkins-home
          persistentVolumeClaim:
            claimName: jenkins-master-pv-claim
#        - name: docker-sock-volume
#          hostPath:
#            path: /var/run/docker.sock
#            type: File
---
### Private-ingressgateway for Jenkins ###
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: jenkins-gateway
spec:
  selector:
    istio: private-ingressgateway  # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
### Jenkins Virtual Service ###
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jenkins-master-svc
spec:
  hosts:
    - "*"
  gateways:
    - jenkins-gateway
  http:
    - match:
        - uri:
            prefix: /jenkins-service
      route:
        - destination:
            host: jenkins-master-svc.cicd.svc.cluster.local
            port:
              number: 80
      corsPolicy:
        allowOrigin:
          - "*"
        allowMethods:
          - POST
          - GET
          - OPTIONS
          - PUT
          - PATCH
          - DELETE
        allowHeaders:
          - "*"

---
### Jenkins Destination Rule ###
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: jenkins-master-svc
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
spec:
  host: jenkins-master-svc.cicd.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN

#---
#### Jenkins Service account ###
#apiVersion: v1
#kind: ServiceAccount
#metadata:
#  name: jenkins-account
#  namespace: cicd
#
#---
##### Jenkins Role ###
#kind: Role
#apiVersion: rbac.authorization.k8s.io/v1
#metadata:
#  name: jenkins-role
#  namespace: cicd
#rules:
#  - apiGroups: [“”]
#    resources: [“pods”]
#    verbs: [“create”,”delete”,”get”,”list”,”patch”,”update”,”watch”]
#  - apiGroups: [“”]
#    resources: [“pods/exec”]
#    verbs: [“create”,”delete”,”get”,”list”,”patch”,”update”,”watch”]
#  - apiGroups: [“”]
#    resources: [“pods/log”]
#    verbs: [“get”,”list”,”watch”]
#  - apiGroups: [“”]
#    resources: [“secrets”]
#    verbs: [“get”]
#
#---
##### Jenkins Role Binding ###
#apiVersion: rbac.authorization.k8s.io/v1
#kind: RoleBinding
#metadata:
#  name: jenkins-role-binding
#  namespace: cicd
#roleRef:
#  apiGroup: rbac.authorization.k8s.io
#  kind: Role
#  name: jenkins-role
#subjects:
#  - kind: ServiceAccount
#    name: jenkins-account
#    namespace: cicd
#
#---
#### Jenkins PersistentVolumeClaim ###
#kind: PersistentVolumeClaim
#apiVersion: v1
#metadata:
#  name: pvc-jenkins-home
#  namespace: cicd
#spec:
#  accessModes:
#    -  ReadWriteMany
#  storageClassName: regional-retained-pd-ssd
#  resources:
#    requests:
#    storage: 50Gi
